[Vertex Group] "Delete all unlocked groups" not working #55461

Closed
opened 2018-06-12 20:42:45 +02:00 by Wonson · 14 comments

System Information
Win10

Blender Version
Broken: 2.79b f4dc9f

Short description of error
I locked 2 groups, I clicked "Delete all unlocked groups" in the menu.
However, all groups are cleared, both locked and unlocked.

Update:
I found that its not working only after working a while on Blender, like assigning and removing vertices from groups, switch edit mode on/off etc.

If it's not working, the following steps can make it work again for a while, for unknown reasons...

  1. save
  2. new a startup file
  3. open the .blend file you saved in step 1
**System Information** Win10 **Blender Version** Broken: 2.79b f4dc9f **Short description of error** I locked 2 groups, I clicked "Delete all unlocked groups" in the menu. However, all groups are cleared, both locked and unlocked. Update: I found that its not working only after working a while on Blender, like assigning and removing vertices from groups, switch edit mode on/off etc. If it's not working, the following steps can make it work again for a while, for unknown reasons... 1. save 2. new a startup file 3. open the .blend file you saved in step 1
Author

Added subscriber: @wonson

Added subscriber: @wonson
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems I cannot reproduce this (I know you've mentioned it only happens after a while of working, but I did quite a bit of assigning/removing, obmode/editmode switching to no avail...)

The fact that this wont happen in a saved/reopened file apparently makes it even harder to reproduce.
Could you find the steps that actually lead to this behavior?
(Giving us the log of the Info-Editor [where operators and property changes are recorded] might also help...)

Marking as incomplete for the time being...

Seems I cannot reproduce this (I know you've mentioned it only happens after a while of working, but I did quite a bit of assigning/removing, obmode/editmode switching to no avail...) The fact that this wont happen in a saved/reopened file apparently makes it even harder to reproduce. Could you find the steps that actually lead to this behavior? (Giving us the log of the Info-Editor [where operators and property changes are recorded] might also help...) Marking as incomplete for the time being...
Author

OK, trying.

Just found out that saved/reopened only fix it for a while, the "Delete all unlocked groups" will eventually be broken again at some point.
The real trigger is still unknown though.

OK, trying. Just found out that saved/reopened only fix it for a while, the "Delete all unlocked groups" will eventually be broken again at some point. The real trigger is still unknown though.

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2018-07-12 16:15:54 +02:00

I’m sorry, but we cannot investigate an issue we cannot reproduce, so will archive this report until someone can give enough elements to consistently reproduce it. Thanks for the report anyway.

I’m sorry, but we cannot investigate an issue we cannot reproduce, so will archive this report until someone can give enough elements to consistently reproduce it. Thanks for the report anyway.
Author

Sorry for that, I can't find the rule of it.

One thing I suspect is: The mesh having the problem is an imported fbx made by 3dsmax, with vertex groups.

Sorry for that, I can't find the rule of it. One thing I suspect is: The mesh having the problem is an imported fbx made by 3dsmax, with vertex groups.

Added subscriber: @fangscomic

Added subscriber: @fangscomic

I had the same problem yesterday, then i found this post.

So i test it on 3 objects, each object have some vertex group.
Object 1, I locked some of it and click "delete all groups" (maybe this action is where the bug starts)I go object 2, locked some vertex group, clickDelete all unlocked groups ... result was all deleted

Then I redo action (Ctrl + Z) on object 2,
delete any unlocked vertex group by clicking on minus sign, after that I perform Delete all unlocked groups... It works or even after that.

I test on object 3, locked some vertex group, click Delete all unlocked groups , it does not give any problem.

The Delete all unlocked groups button is alive!


It seem the "delete all groups"button still have someinfluence once after you click it...

I hope this could help the developer to figure it how this error happen.

I had the same problem yesterday, then i found this post. So i test it on 3 objects, each object have some vertex group. Object 1, I locked some of it and click **"delete all groups" (maybe this action is where the bug starts)**I go object 2, locked some vertex group, click**Delete all unlocked groups** ... result was all deleted Then I redo action (Ctrl + Z) on object 2, delete any unlocked vertex group by clicking on **minus sign**, after that I perform **Delete all unlocked groups**... It works or even after that. I test on object 3, locked some vertex group, click **Delete all unlocked groups** , it does not give any problem. The **Delete all unlocked groups** button is alive! ------ It seem the **"delete all groups"**button still have some**influence** once after you click it... I hope this could help the developer to figure it how this error happen.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Ah thanks, now I see what happens here, fix incoming.

Ah thanks, now I see what happens here, fix incoming.

This issue was referenced by 42ba294235

This issue was referenced by 42ba2942355c9320d3173f4ea3e374a63f0f8e3a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55461
No description provided.