Fix T55461: [Vertex Group] "Delete all unlocked groups" not working.